--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "模拟IC小菜包是也"
 ---
 
 {% for post in paginator.posts %}
