--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@ header-img: "img/post-bg-rwd.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
+    <blockquote><p>Yet a Student.</p></blockquote>
 
     <p>Hi, I am <strong>WZP</strong></p>
     <p>To be continued...</p>
